# airlock

./: CLAUDE.md  DISCLAIMER.md  LICENSE  PHASE1_PROOF.txt  PHASE2_PROOF.txt  PHASE3_PROOF.txt  PHASE4_PROOF.txt  PROOF.txt  README.md  TEST_REPORT.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/airlock/: __init__.py  cli.py  digest.py  engine.py  evalsuite.py  logparse.py  policy.py  session.py  supervisor.py
src/airlock/core/: __init__.py  action.py  detectors.py  patterns.py  taint.py
src/airlock_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/stopgate/: __init__.py  cli.py  digest.py  engine.py  evalsuite.py  logparse.py  policy.py  session.py  supervisor.py
src/stopgate/core/: __init__.py  action.py  detectors.py  patterns.py  taint.py
src/stopgate/data/: sample_session.jsonl
tests/: _probe.py  conftest.py  test_action.py  test_claude_code_transcript.py  test_cli.py  test_detectors.py  test_digest.py  test_engine.py  test_eval.py  test_live_gate.py  test_logparse.py  test_policy.py  test_supervisor.py  test_taint.py
